--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -1,11 +1,3 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
-
-# The lines below are called `modelines`. See `:help modeline`
-# Feel free to remove those if you don't want/need to use them.
-# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
-# vim: set ts=2 sw=2 tw=0 fo=cnqoj
-
 version: 2
 
 before:
@@ -14,9 +6,7 @@ before:
     #- cargo search cargo-zigbuild
 
 builds:
-  - env:
-      - CGO_ENABLED=0
-    builder: rust
+  - builder: rust
     command: build
     targets:
       - x86_64-unknown-linux-gnu
