--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,15 @@ jobs:
         with:
           version: 9
 
+      - name: Run release.py
+        run: python release.py ${{ inputs.version }}
+
+      - name: commit version
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: v${{ inputs.version }} Release
+          tagging_message: v${{ inputs.version }}
+
       - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
