--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,6 @@ jobs:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
 
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 'stable'
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -43,21 +39,21 @@ jobs:
           commit_message: v${{ inputs.version }} Release
           tagging_message: v${{ inputs.version }}
 
-      - uses: goreleaser/goreleaser-action@v6
-        with:
-          distribution: goreleaser
-          version: "~> v2"
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
-
-      - name: Upload snapshot
-        uses: actions/upload-artifact@v4
-        with:
-          name: snapshot
-          path: build/*
-          retention-days: 1
+#      - uses: goreleaser/goreleaser-action@v6
+#        with:
+#          distribution: goreleaser
+#          version: "~> v2"
+#          args: release --clean
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
+#
+#      - name: Upload snapshot
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: snapshot
+#          path: build/*
+#          retention-days: 1
 
       - name: Build & publish image
         run: |
