--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Leigh MacDonald <leigh.macdonald@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/leighmacdonald/tf2_demostats"
 edition = "2021"
+default-run = "demostats"
 
 [lib]
 name = "tf2_demostats"
@@ -15,6 +16,10 @@ path = "src/lib.rs"
 name = "demostats"
 path = "src/bin/main.rs"
 
+[[bin]]
+name = "cli"
+path = "src/bin/cli.rs"
+
 [dependencies]
 actix-web = "4.9"
 actix-multipart = "0.7.2"
@@ -22,4 +27,6 @@ env_logger = "0.11.3"
 log = "0.4.21"
 tf-demo-parser = "0.5.1"
 fnv = "1.0.7"
+tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.134"
