--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ fnv = "1.0.7"
 tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.134"
+num_enum = "0.7.3"
