--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ actix-web = "4.9"
 actix-multipart = "0.7.2"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-tf-demo-parser = { version = "0.5.1", features = ["tracing"] }
+tf-demo-parser = { version = "0.5.1", features = ["trace"] }
 fnv = "1.0.7"
 tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
 serde = { version = "1.0.197", features = ["derive"] }
