--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.134"
 num_enum = "0.7.3"
 bit-set = "0.8.0"
+enumset = "1.1.5"
