--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,6 @@ serde_json = "1.0.134"
 num_enum = "0.7.3"
 bit-set = "0.8.0"
 enumset = "1.1.5"
+awc = { version = "3.5.1", features = ["rustls"] }
+keyvalues-serde = "0.2.2"
+merge = "0.1.0"
