--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "3"
 
 [workspace.package]
 version = "0.1.7"
-description = "demoparser"
+description = "Demo parser for Team Fortress 2"
 readme = "README.md"
 license = "MIT"
 authors = ["Leigh MacDonald <leigh.macdonald@gmail.com>"]
