Update release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,63 +1,36 @@
 name: release
 
 on:
+  push:
+    # run only against tags
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'New version'
-        required: true
+
+permissions:
+  contents: write
+  # packages: write
+  # issues: write
+  # id-token: write
 
 jobs:
   release:
-    name: release
     runs-on: ubuntu-latest
-    permissions: write-all
     steps:
-      - uses: actions/checkout@v4
+      - uses: mlugg/setup-zig@v2
+
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.head_ref }}
           fetch-depth: 0
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: dtolnay/rust-toolchain@stable
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
-      - name: Run release.py
-        run: python release.py ${{ inputs.version }}
-
-      - name: commit version
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: v${{ inputs.version }} Release
-          tagging_message: v${{ inputs.version }}
-
-#      - uses: goreleaser/goreleaser-action@v6
-#        with:
-#          distribution: goreleaser
-#          version: "~> v2"
-#          args: release --clean
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
-#
-#      - name: Upload snapshot
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: snapshot
-#          path: build/*
-#          retention-days: 1
-
-      - name: Build & publish image
-        run: |
-          docker build . --tag ghcr.io/leighmacdonald/tf2_demostats:${{ inputs.version }}
-          docker push ghcr.io/leighmacdonald/tf2_demostats:${{ inputs.version }}
-          docker build . --tag ghcr.io/leighmacdonald/tf2_demostats:latest
-          docker push ghcr.io/leighmacdonald/tf2_demostats:latest
+          distribution: goreleaser
+          version: "~> v2"
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
