--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 version: 2
 
 before:
@@ -10,7 +11,7 @@ builds:
     command: build
     targets:
       - x86_64-unknown-linux-gnu
-      #- x86_64-pc-windows-gnu
+      - x86_64-pc-windows-gnu
     flags:
       - --release
       - --package=tf2_demostats_cli
@@ -36,3 +37,12 @@ changelog:
     exclude:
       - "^docs:"
       - "^test:"
+
+release:
+  github:
+    owner: leighmacdonald
+    name: tf2_demostats
+  draft: false
+  replace_existing_draft: true
+  use_existing_draft: true
+  replace_existing_artifacts: true
